--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li><a href="#hero" class="active">Beranda</a></li>
-                <li><a href="#tentang">Tentang</a></li>
+                <li><a href="#about">Tentang</a></li>
                 <li><a href="#produk">Produk</a></li>
                 <li><a href="#review">Review</a></li>
             </ul>
